# bitbake-language-server

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py
docs/api/: bitbake-language-server.md
docs/resources/: configure.md  install.md
requirements/: misc.txt  web.txt
src/bitbake_language_server/: __main__.py  _tree_sitter.py  api.py  diagnostics.py  server.py  tool.py  utils.py
src/bitbake_language_server/assets/json/: bitbake.json
src/bitbake_language_server/misc/: __init__.py
tests/: server_test.py  test.bb  test_utils.py
