cmake_minimum_required(VERSION 3.10)
include(FetchContent)
FetchContent_Declare(tree-sitter-bitbake GIT_REPOSITORY https://github.com/amaanq/tree-sitter-bitbake)
FetchContent_MakeAvailable(tree-sitter-bitbake)
include_directories(${tree-sitter-bitbake_SOURCE_DIR}/src)
add_library(parser SHARED ${tree-sitter-bitbake_SOURCE_DIR}/src/parser.c)
if(NOT DEFINED SKBUILD_PLATLIB_DIR)
  set(SKBUILD_PLATLIB_DIR ${CMAKE_SOURCE_DIR}/src)
endif()
set(CMAKE_INSTALL_LIBDIR ${SKBUILD_PLATLIB_DIR}/bitbake_language_server/data/lib)
install(TARGETS parser RUNTIME)
