[build-system]
requires = ["setuptools_scm[toml] >= 6.2", "setuptools-generate >= 0.0.6"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "bitbake-language-server"
description = "bitbake language server"
readme = "README.md"
# type_a | type_b
requires-python = ">= 3.10"
keywords = [""]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[[project.authors]]
name = "Wu Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://bitbake-language-server.readthedocs.io"
Download = "https://github.com/Freed-Wu/bitbake-language-server/releases"
"Bug Report" = "https://github.com/Freed-Wu/bitbake-language-server/issues"
Source = "https://github.com/Freed-Wu/bitbake-language-server"

[project.scripts]
bitbake-language-server = "bitbake_language_server.__main__:main"

[tool.setuptools.package-data]
bitbake_language_server = ["py.typed", "assets/**"]

[tool.setuptools.data-files]
"share/man/man1" = ["sdist/bitbake-language-server.1"]
"share/bash-completion/completions" = ["sdist/bitbake-language-server"]
"share/zsh/site-functions" = ["sdist/_bitbake-language-server"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

# begin: scripts/update-pyproject.toml.pl
[tool.setuptools.dynamic.optional-dependencies.dev]
file = "requirements/dev.txt"
# end: scripts/update-pyproject.toml.pl

[tool.setuptools_scm]
write_to = "src/bitbake_language_server/_version.py"

[tool.setuptools-generate]
write-to = "src/bitbake_language_server/_metainfo.py"

[tool.mdformat]
number = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.doq]
template_path = "templates"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.cibuildwheel]
archs = ["all"]
skip = "*37-* *38-* *39-*"
before-test = "pip install -rrequirements.txt -rrequirements/dev.txt"
test-command = "pytest {project}"
